--- a/css/articlelst.css
+++ b/css/articlelst.css
@@ -20,16 +20,22 @@
     overflow: hidden;
     list-style: none;
     padding: 0;
+    /* padding-inline-start:0;
+    margin-block-start:0;
+    margin-block-end: 0; */
+    margin-block:0
 }
 
 .articlelist__listitem {
     scroll-snap-type: x mandatory;
     overflow-x: auto;
     display: flex;
-    height: 100px;
-    border: 1px solid white;
+    height: 60px;
+    /* border: 1px solid white; */
+ 
     scrollbar-width: none;
     cursor: grab;
+
 }
 
 .articlelist__listitem:-webkit-scrollbar {
@@ -57,10 +63,58 @@
     background-color: darkred;
   }
   
-  .articlelist__listitemtext {
+  .articlelist__listitemcontent {
+    display: flex;
     flex: 2 0 100%;
     color: white;
-    background-color: slategrey;
+    /* background-color: slategrey; */
     padding: 0.5rem;
+    position:relative;
+    font-size: 1em;
+
+    border-bottom: rgba(25, 25, 25, 0.25) 1px solid;
+
   }
+
+  .articlelist__listitemimg {
+      flex: 0 0 auto;
+    height: 50px;
+    width: 50px;
+}
+.articlelist__listitemdata {
+    display:flex;
+    flex-flow: column nowrap;
+    flex: 0 1 auto;
+}
+
+  .articlelist__listitemtitle {
+      display:flex;
+      /* position: absolute; */
+      color:red;
+
+  }
+
+  .articlelist__listitemquantcont {
+    
+      display:flex;
+      flex: 0 1 auto;
+      
+      ;
+  }
+
+
+  .articlelist__listitemtextquant {
+    border: none;
+    width: 3em;
+  }
+
+  .articlelist__listitemtextqual {
+    color: blue;
+  }
+
+  .articlelist__listitem::-webkit-scrollbar {
+      display:none;
+  }
+ 
+
   
