--- a/css/articlelst.css
+++ b/css/articlelst.css
@@ -3,17 +3,33 @@
     height: 100%;
     width: 100%;
     position: absolute;
+    overflow-y:scroll;
+    -webkit-overflow-scrolling: touch;
+
 }
 
 .articlelist__list {
     /* width: 100%; */
-    overflow: hidden;
+    /* overflow: hidden; */
     list-style: none;
     padding: 0;
+    
     /* padding-inline-start:0;
     margin-block-start:0;
     margin-block-end: 0; */
-    margin-block:0
+    margin-block:0;
+    
+}
+
+.articlelist__listitemheader {
+  scroll-snap-type: x mandatory;
+  overflow-x: auto;
+  display: flex;
+  height: 60px;
+  /* border: 1px solid white; */
+
+  scrollbar-width: none;
+  cursor: grab;
 }
 
 .articlelist__listitem {
@@ -26,6 +42,15 @@
     scrollbar-width: none;
     cursor: grab;
 
+}
+
+.articlelist__listitem--locked {
+  position:sticky;
+  position: -webkit-sticky;
+  
+  top: 0;
+  background-color: #FFF;
+  z-index:2;
 }
 
 .articlelist__listitem:-webkit-scrollbar {
@@ -44,12 +69,12 @@
   }
   
   .articlelist__listitembutton:first-of-type {
-    flex: 1 0 30%;
+    flex: 1 0 10%;
     background-color: orange;
   }
 
   .articlelist__listitembutton:last-of-type {
-    flex: 1 0 30%;
+    flex: 1 0 10%;
     background-color: darkred;
   }
   
@@ -58,7 +83,7 @@
     flex: 2 0 100%;
     color: white;
     /* background-color: slategrey; */
-    padding: 0.5rem;
+    padding: 0.3em;
     position:relative;
     font-size: 1em;
 
@@ -70,6 +95,7 @@
       flex: 0 0 auto;
     height: 50px;
     width: 50px;
+    padding-right: 20px;
 }
 .articlelist__listitemdata {
     display:flex;
@@ -81,6 +107,8 @@
       display:flex;
       /* position: absolute; */
       color:red;
+      padding-bottom: 0.1em;
+      
 
   }
 
@@ -88,18 +116,37 @@
     
       display:flex;
       flex: 0 1 auto;
-      
-      ;
+
+   
   }
 
 
   .articlelist__listitemtextquant {
-    border: none;
-    width: 3em;
+    flex: 0 1 auto;
+    border: 1px solid rgba(100, 100, 100, 1);
+    border-radius: 2px;
+    width:5em;
+    height:1.5em;
+    color:rgba(100, 100, 100, 1);;
+    padding: .1em;
+  
   }
 
   .articlelist__listitemtextqual {
-    color: blue;
+    flex: 0 1 auto;
+    color: rgba(100, 100, 100, 1);
+    background-color: #FFFFFF;
+    border-radius: 2px;
+    height:1.5em;
+    padding: 0;
+    margin-left:5px;
+    width:5em;
+    text-align: center;
+  }
+
+  .articlelist__listitemtextqual--selected {
+    background-color: rgba(100, 100, 100, 1);
+    color: #FFFFFF;
   }
 
   .articlelist__listitem::-webkit-scrollbar {
