--- a/css/stall.css
+++ b/css/stall.css
@@ -1,30 +1,30 @@
 .stall {
-
     height: 100%;
     width: 100%;
     position: absolute;
-    overflow-y:scroll;
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
-
 }
 
 .stall_searchbox {
-
     display: flex;
     flex-direction: row-reverse;
     /* scroll-snap-type: x mandatory; */
     /* overflow-x: auto; */
     /* height: 60px; */
     /* border: 1px solid white; */
- 
     scrollbar-width: none;
     cursor: grab;
-
-
     position: relative;
-    padding:5px;
+    padding: 5px;
     position: relative;
 
+    position:sticky;
+    position: -webkit-sticky;
+    
+    top: 0;
+    background-color: #FFF;
+    z-index:2;
 }
 
 .stall__searchboxlabel {
@@ -34,9 +34,7 @@
     font-weight: 700;
     padding-bottom: 20px;
     padding-top: 70px;
-} 
-
-
+}
 
 .stall__searchinputlabel {
     /* flex: 0 1 auto; */
@@ -79,16 +77,10 @@
     text-overflow: ellipsis;
 }
 
-.stall__searchinput,
-input.stall__searchinput:-webkit-autofill, /* autofill browser styling disabled */
-input.stall__searchinput:-webkit-autofill:hover, 
-input.stall__searchinput:-webkit-autofill:focus, 
-textarea.stall__searchinput:-webkit-autofill,
-textarea.stall__searchinput:-webkit-autofill:hover,
-textarea.stall__searchinput:-webkit-autofill:focus,
-select.stall__searchinput:-webkit-autofill,
-select.stall__searchinput:-webkit-autofill:hover,
-select.stall__searchinput:-webkit-autofill:focus  {
+.stall__searchinput, input.stall__searchinput:-webkit-autofill,
+/* autofill browser styling disabled */
+
+input.stall__searchinput:-webkit-autofill:hover, input.stall__searchinput:-webkit-autofill:focus, textarea.stall__searchinput:-webkit-autofill, textarea.stall__searchinput:-webkit-autofill:hover, textarea.stall__searchinput:-webkit-autofill:focus, select.stall__searchinput:-webkit-autofill, select.stall__searchinput:-webkit-autofill:hover, select.stall__searchinput:-webkit-autofill:focus {
     flex: 0 1 auto;
     /* position: absolute; */
     font-family: 'Montserrat', sans-serif;
@@ -106,8 +98,7 @@ select.stall__searchinput:-webkit-autofill:focus  {
     border: none;
     /* max-width:300px;  */
     min-width: 250px;
-    width:100%;
-    
+    width: 100%;
     overflow: visible;
     touch-action: manipulation;
     background: #e6e6e6;
@@ -119,17 +110,236 @@ select.stall__searchinput:-webkit-autofill:focus  {
     display: flex;
     align-items: center;
     position: absolute;
-    bottom: -2px;
+    top: 15px;
+    /* bottom: -2px; */
     /* left: 0; */
-    height: 100%;
     padding-right: 10px;
     pointer-events: none;
     color: #666666;
-    font-size: 1.5em;
+    font-size: 2em;
     transition: all 0.4s;
 }
+
+/* .stall__searchinput:not(:placeholder-shown)~.stall__searchinputsymbol, .stall__searchinput:focus~.stall__searchinputsymbol { */
+
+/* transition: 1s ease-in; */
+
+/* padding-left: 5px; */
+
+/* }  */
+
+.stall__shopitemscat {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
+    grid-auto-rows: 10em;
+    /* grid-template-rows: repeat(auto-fit, 200px); */
+    /* grid-auto-rows: minmax(100px, auto);
+    grid-auto-columns: minmax(100px, 100px);
+    grid-template-columns: repeat(10, 200px);
+    grid-template-rows: minmax(10px, 60px); */
+    /* grid-template-columns: 20% 20% 20% 20% 20%; */
+    /* grid-auto-flow: column; */
+     /* grid-template-columns: minmax(200,400)  */
+     /*
+    grid-template-rows: 100px 100px 100px; */
+    /* grid-auto-rows: 150px ; */
+    /* column-gap:w 2px;
+    row-gap: 2px;
+    justify-items:    stretch;
+    justify-content: stretch;  */
+    /* grid-template-rows: auto; */
+
+
+}
+
+.stall__shopitemscattitle {
+    display: flex;
+    /* flex-direction: row-reverse; */
+    /* scroll-snap-type: x mandatory; */
+    /* overflow-x: auto; */
+    /* height: 60px; */
+    /* border: 1px solid white; */
+    /* scrollbar-width: none; */
+    /* cursor: grab; */
+    position: relative;
+    padding: 5px;
+    position: relative;
+    background-color: red;
+    color: white;
+    /* height: 2.5em; */
 /* 
-.stall__searchinput:not(:placeholder-shown)~.stall__searchinputsymbol, .stall__searchinput:focus~.stall__searchinputsymbol {
-    /* transition: 1s ease-in; */
-    padding-left: 5px;
-} */
+    position:sticky;
+    position: -webkit-sticky;
+    
+    top: 0; */
+    /* background-color: #FFF;
+    z-index:2; */
+     /* display: flex; 
+     align-items: center; 
+    
+    grid-column: 1 / -1;
+    /* vertical-align: middle; */
+    /* background-color: red;
+    color: white;
+    height: 2.5em;
+    padding-left: 10px;  */
+}
+
+.stall__shopitemsgridcontainer {
+
+}
+
+.stall__shopitem {
+    display:grid;
+    grid-template-columns: 1fr  ;
+    grid-template-rows: 2.5em 7.5em  ;
+    /* grid-area: item; */
+    /* width:100%; */
+    /* justify-self: stretch; */
+    /* height:200px; */
+    /* grid-row: span 4; */
+}
+
+.stall__shopitemtitle  {
+    margin:0 ;
+    display:flex;
+    align-self: center;
+    justify-content: center;
+    /* text-align: center; */
+    grid-column: 1 / -1 ;
+}
+
+.stall_shopitemimgcontainer {
+    
+        display: flex;
+        justify-content: center;
+        /* max-width: 100%;
+       height: 80%; */
+    
+}
+.stall__shopitemimg {
+    /* display:flex; */
+    /* align-self: center; */
+    /* justify-content: center; */
+    /* text-align: center; */
+    /* max-width: 80%;
+    max-height: 80%; */
+    /* object-fit: cover;
+    width: 100%;
+    max-height: 100%; */
+    /* width: 100%;
+   
+    height: 100%;
+    display: block;
+    object-fit:scale-down; */
+    max-height: 7.5em;
+    max-width: 7.5em;
+    
+}
+
+
+.stall_selectedarticlebackdrop {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    z-index: 3;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+
+    background-color: rgba(0,0,0,0.4);
+
+
+}
+
+.stall_selectedarticle {
+
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    /* justify-content: center; */
+
+    z-index: 4;
+    border: 2px solid rgba(25, 25, 25, 0.25);
+    padding: 10px;
+    border-radius: 20px;
+    /* width: 300px; */
+    position: relative;
+    background:#ffffff;
+    /* width:50%;
+    height:20%; */
+ 
+}
+
+.stall__selectedarticletitle  {
+    margin:0 ;
+    display:flex;
+    align-self: center;
+    justify-content: center;
+    /* text-align: center; */
+    grid-column: 1 / -1 ;
+}
+
+.stall_selectedartic;eimgcontainer {
+    
+    display: flex;
+    justify-content: center;
+    /* max-width: 100%;
+   height: 80%; */
+
+}
+
+.stall_selectedarticleimg {
+    /* display:flex; */
+    /* align-self: center; */
+    /* justify-content: center; */
+    /* text-align: center; */
+    /* max-width: 80%;
+    max-height: 80%; */
+    /* object-fit: cover;
+    width: 100%;
+    max-height: 100%; */
+    /* width: 100%;
+   
+    height: 100%;
+    display: block;
+    object-fit:scale-down; */
+    max-height: 10em;
+    max-width: 105em;
+    
+}
+
+
+.stall_selectedarticlebtn {
+    /* margin:0 ; */
+    /* display:flex; */
+    /* align-self: center;
+    justify-content: center; */
+    text-align: center;
+    /* text-align: center; */
+    /* grid-column: 1 / -1 ;     */
+        /* -webkit-appearance: none; */
+        /* display:flex; */
+        /* align-self: center; */
+        /* justify-content: center; */
+        vertical-align: middle;
+        width: 100%;
+        margin-top: 20px;
+        /* font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        line-height: 1.2; */
+        color: #FFFFFF;
+        font-size: 1.5em;
+        height: 50px;
+        line-height: 50px;;
+        background: #66DF4C;
+        border-radius: 4px;
+        border: none; 
+
+
+}
