--- a/css/form.css
+++ b/css/form.css
@@ -19,6 +19,7 @@
     font-weight: 700;
     padding-bottom: 20px;
     padding-top: 70px;
+
 }
 
 @media screen and (max-width: 500px) {
@@ -35,8 +36,8 @@
         left: 50%;
         transform: translate(-50%, 0%);
         /* or 50% */
-        border: 2px solid rgba(25, 25, 25, 0.25);
-        background: #FFFFFF;
+        border: 2px solid var(--bordercolor);
+        background: var(--bkgroundcolor);
     }
     .form__icondesktop {
         display: none;
@@ -47,15 +48,12 @@
     .form__icondesktop {
         flex: 0 1 auto;
         align-self: center;
-        /* position: absolute;
-top:0px;
-left: -250px;        */
+
         width: 140px;
         height: 140px;
         border-radius: 20px;
         margin-right: 20px;
-        /* or 50% */
-        /* border: 2px solid rgba(25, 25, 25, 0.25); */
+
     }
     .form__iconmobile {
         display: none;
@@ -73,31 +71,19 @@ left: -250px;        */
 
 .form__forminputwrapper {
     display: flex;
-    /* justify-content: flex-end;
-    flex: 0 1 auto;
-    width: 100%; */
-    /* z-index: 1; */
+
     margin-bottom: 10px;
     position: relative;
-    /* color: #666666; */
-    /* display: block; */
-    /* background: #e6e6e6; */
-    /* height:50px; */
-    /* border-radius: 4px; */
-    /* padding: 0 30px 0 68px; */
+
 }
 
 .form__forminputlabel {
-    /* flex: 0 1 auto; */
+  
     position: absolute;
-    /* width: 100%; */
-    /* height:50px; */
+
     left: 40px;
     top: 15px;
-    /* font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    line-height: 1.2em; */
-    /* color: #777; */
+
     font-size: 1.5em;
     transition: .3s all ease;
 }
@@ -122,7 +108,7 @@ left: -250px;        */
     /* transition: 1s ease-in; */
     padding-left: 5px;
     display: initial;
-    color: red;
+    color: var(--formerrorcolor);
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -139,12 +125,9 @@ select.form__forminput:-webkit-autofill,
 select.form__forminput:-webkit-autofill:hover,
 select.form__forminput:-webkit-autofill:focus  {
     flex: 0 1 auto;
-    /* position: absolute; */
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     line-height: 1.2;
-    color: #777;
-    -webkit-text-fill-color: #777;
     font-size: 1.5em;
     height: 50px;
     padding-top: 10px;
@@ -158,8 +141,8 @@ select.form__forminput:-webkit-autofill:focus  {
     
     overflow: visible;
     touch-action: manipulation;
-    background: #e6e6e6;
-    -webkit-box-shadow: 0 0 0px 1000px #e6e6e6 inset;
+    background: var(--formfieldbkgroundcolor); // iOS 
+    -webkit-box-shadow: 0 0 0px 1000px var(--formfieldbkgroundcolor) inset;
     border-radius: 4px;
 }
 
@@ -172,7 +155,7 @@ select.form__forminput:-webkit-autofill:focus  {
     height: 100%;
     padding-left: 10px;
     pointer-events: none;
-    color: #666666;
+    color: var(--fgcolor);
     font-size: 1.5em;
     transition: all 0.4s;
 }
@@ -189,10 +172,10 @@ select.form__forminput:-webkit-autofill:focus  {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     line-height: 1.2;
-    color: #FFFFFF;
+    color: var(--btnfgcolor);
     font-size: 1.5em;
     height: 50px;
-    background: #66DF4C;
+    background: var(--buttoncolor);
     border-radius: 4px;
     border: none;
     margin-top: 30px;
@@ -205,12 +188,12 @@ text-align:center;
 
 @media (hover) {
     .form__resetlink--link:hover {
-        color: 66DF4C;
+        color: var(--linkhovercolor);
     }
 }
 
 @media (hover: none) {
     .form__resetlink--link {
-        color: 66DF4C;
+        color: var(--linkhovercolor);
     }
 }
