--- a/css/stall.css
+++ b/css/stall.css
@@ -23,7 +23,7 @@
     position: -webkit-sticky;
     
     top: 0;
-    background-color: #FFF;
+    background-color: var(--bkgroundcolor);
     z-index:2;
 }
 
@@ -37,16 +37,12 @@
 }
 
 .stall__searchinputlabel {
-    /* flex: 0 1 auto; */
+
     position: absolute;
-    /* width: 100%; */
-    /* height:50px; */
+
     left: 20px;
     top: 15px;
-    /* font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    line-height: 1.2em; */
-    /* color: #777; */
+
     font-size: 1.5em;
     transition: .3s all ease;
 }
@@ -86,8 +82,8 @@ input.stall__searchinput:-webkit-autofill:hover, input.stall__searchinput:-webki
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     line-height: 1.2;
-    color: #777;
-    -webkit-text-fill-color: #777;
+    color: var(--fgcolor);
+    -webkit-text-fill-color: var(--fgcolor);
     font-size: 1.5em;
     height: 50px;
     padding-top: 10px;
@@ -101,8 +97,8 @@ input.stall__searchinput:-webkit-autofill:hover, input.stall__searchinput:-webki
     width: 100%;
     overflow: visible;
     touch-action: manipulation;
-    background: #e6e6e6;
-    -webkit-box-shadow: 0 0 0px 1000px #e6e6e6 inset;
+    background: var(--formfieldbkgroundcolor);
+    -webkit-box-shadow: 0 0 0px 1000px var(--formfieldbkgroundcolor) inset;
     border-radius: 4px;
 }
 
@@ -115,7 +111,7 @@ input.stall__searchinput:-webkit-autofill:hover, input.stall__searchinput:-webki
     /* left: 0; */
     padding-right: 10px;
     pointer-events: none;
-    color: #666666;
+    color: var(--fgcolor);
     font-size: 2em;
     transition: all 0.4s;
 }
@@ -164,8 +160,8 @@ input.stall__searchinput:-webkit-autofill:hover, input.stall__searchinput:-webki
     position: relative;
     padding: 5px;
     position: relative;
-    background-color: red;
-    color: white;
+    background-color: var(--artcatbgcolor);
+    color: var(--artcatfgcolor);
     /* height: 2.5em; */
 /* 
     position:sticky;
@@ -265,12 +261,12 @@ input.stall__searchinput:-webkit-autofill:hover, input.stall__searchinput:-webki
     /* justify-content: center; */
 
     z-index: 4;
-    border: 2px solid rgba(25, 25, 25, 0.25);
+    border: 2px solid var(--backdropcolor);
     padding: 10px;
     border-radius: 20px;
     /* width: 300px; */
     position: relative;
-    background:#ffffff;
+    background: var(--bkgroundcolor);
     /* width:50%;
     height:20%; */
  
@@ -333,11 +329,11 @@ input.stall__searchinput:-webkit-autofill:hover, input.stall__searchinput:-webki
         /* font-family: 'Montserrat', sans-serif;
         font-weight: 400;
         line-height: 1.2; */
-        color: #FFFFFF;
+        color: var(--btnfgcolor);
         font-size: 1.5em;
         height: 50px;
         line-height: 50px;;
-        background: #66DF4C;
+        background: var(--buttoncolor);
         border-radius: 4px;
         border: none; 
 
