--- a/css/container.css
+++ b/css/container.css
@@ -48,7 +48,7 @@
     
     }
     
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 750px) {
         .container__bottombar {
 
             border-top: var(--bordercolor) solid 1px;
@@ -61,10 +61,12 @@
 
         .container__contentright {
             flex: 0;
+            width: 0;
+            overflow:hidden;
         }
     }
     
-    @media screen and (min-width: 501px) {
+    @media screen and (min-width: 751px) {
         .container__bottombar {
             display: none;
         }
