--- a/css/error.css
+++ b/css/error.css
@@ -31,8 +31,8 @@
     /* width: 300px; */
     position: relative;
     background: var(--bkgroundcolor);
-    width:50%;
-    height:20%;
+    max-width:80%;
+    max-height:40%;
  
 }
 
