--- a/css/form.css
+++ b/css/form.css
@@ -18,7 +18,7 @@
     font-size: 1.5em;
     font-weight: 700;
     padding-bottom: 20px;
-    padding-top: 70px;
+    padding-top: clamp(30px,6vh,70px);
 
 }
 
@@ -136,7 +136,7 @@ select.form__forminput:-webkit-autofill:focus  {
     background: none;
     outline: none;
     border: none;
-    max-width:300px;
+    max-width:280px;
     min-width: 250px;
     
     overflow: visible;
